--- a/Solid.Core/Solid.Core.csproj
+++ b/Solid.Core/Solid.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.28" />
   </ItemGroup>
 
 </Project>
