--- a/Solid.Service/Solid.Service.csproj
+++ b/Solid.Service/Solid.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.28" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Solid.Core\Solid.Core.csproj" />
   </ItemGroup>
 
